--- a/app/src/main/res/layout/app_bar_top_main_fragment.xml
+++ b/app/src/main/res/layout/app_bar_top_main_fragment.xml
@@ -21,7 +21,7 @@
                     style="@style/MaterialButtonStyleAppBarTopBackground"
                     android:layout_height="match_parent"
                     android:drawableLeft="@drawable/icon_menu"
-                    android:id="@+id/btnAppBarSettings"
+                    android:id="@+id/btnAppBarMainMenu"
                     app:layout_constraintStart_toStartOf="parent" />
 
             <com.google.android.material.textview.MaterialTextView
@@ -33,7 +33,7 @@
                     android:text="@string/amicum_mobile"
                     android:id="@+id/tvAppBarTitle"
                     app:layout_constraintEnd_toStartOf="@+id/btnAppBarNotification"
-                    app:layout_constraintStart_toEndOf="@+id/btnAppBarSettings" />
+                    app:layout_constraintStart_toEndOf="@+id/btnAppBarMainMenu" />
 
             <com.google.android.material.button.MaterialButton
                     style="@style/MaterialButtonStyleAppBarTopBackground"
