--- a/app/src/main/res/layout/splash_screen_fragment.xml
+++ b/app/src/main/res/layout/splash_screen_fragment.xml
@@ -1,45 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                   xmlns:tools="http://schemas.android.com/tools"
-                                                   android:layout_width="match_parent"
-                                                   android:layout_height="match_parent" android:background="#FFFFFF">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#FFFFFF">
 
-    <TextView
-            android:layout_width="392dp"
-            android:layout_height="101dp"
-            android:text="@string/splash_top_text"
-            tools:text="@string/splash_top_text"
-            android:ems="10"
-            android:id="@+id/lblTopSplash"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+    <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tvTopTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text='@string/splash_top_text'
             android:textColor="@color/black"
-            android:gravity="center"
-            android:background="@color/white"
-            android:textSize="@dimen/lblTopSplash" android:autofillHints=""/>
-    <TextView
-            android:layout_width="334dp"
-            android:layout_height="100dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="30dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:textSize="@dimen/lblTopSplash"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tvBottomTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text='@string/splash_bottom_text'
-            android:ems="10"
-            android:background="@color/white"
-            android:id="@+id/editTextTextPersonName2"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:textColor="@color/black"
+            android:paddingBottom="30dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:textColor="@color/black"
-            android:gravity="center"
-            android:textSize="@dimen/lblBottomSplash" android:autofillHints=""/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp"
+            android:textSize="@dimen/lblBottomSplash" />
+
     <ImageView
             android:contentDescription="@string/logo_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/splash_logo"
             android:id="@+id/imgLogoSplash"
-            app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
-            app:layout_constraintTop_toBottomOf="@+id/lblTopSplash"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
